// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditorDetailsPanel rendering renders expected elements when showButtons is false 1`] = `
<aside
  className="EditorDetailsPanel"
  id="test"
>
  <IconButton
    aria-label="Close"
    className="EditorDetailsPanel__close"
    icon={
      Object {
        "icon": Array [],
      }
    }
    id="closeDetailsPanelBtn"
    size="large"
    tooltipPlacement="left"
    tooltipText="Close"
    type="ghost"
  />
  <div
    aria-level="2"
    className="EditorDetailsPanel__title"
    id="detailsPanelTitle"
    role="heading"
  >
    Test
  </div>
  <React.Fragment>
    <div
      className="EditorDetailsPanel__body"
    />
  </React.Fragment>
</aside>
`;

exports[`EditorDetailsPanel rendering renders expected elements when showButtons is true 1`] = `
<aside
  className="EditorDetailsPanel"
  id="test"
>
  <IconButton
    aria-label="Close"
    className="EditorDetailsPanel__close"
    icon={
      Object {
        "icon": Array [],
      }
    }
    id="closeDetailsPanelBtn"
    size="large"
    tooltipPlacement="left"
    tooltipText="Close"
    type="ghost"
  />
  <div
    aria-level="2"
    className="EditorDetailsPanel__title"
    id="detailsPanelTitle"
    role="heading"
  >
    Test
  </div>
  <React.Fragment>
    <div
      className="EditorDetailsPanel__body"
    />
    <DefaultDetailsButtons
      className="EditorDetailsPanel__buttons"
      disableDelete="Disable Delete"
      disableEdit="Disable Edit"
      item={
        Object {
          "name": "Test",
        }
      }
      onDelete={[MockFunction]}
      onEdit={[MockFunction]}
    />
  </React.Fragment>
</aside>
`;

exports[`EditorDetailsPanel rendering renders expected elements when the body has a className 1`] = `
<aside
  className="EditorDetailsPanel"
  id="test"
>
  <IconButton
    aria-label="Close"
    className="EditorDetailsPanel__close"
    icon={
      Object {
        "icon": Array [],
      }
    }
    id="closeDetailsPanelBtn"
    size="large"
    tooltipPlacement="left"
    tooltipText="Close"
    type="ghost"
  />
  <div
    aria-level="2"
    className="EditorDetailsPanel__title"
    id="detailsPanelTitle"
    role="heading"
  >
    Test
  </div>
  <React.Fragment>
    <div
      className="BodyClass EditorDetailsPanel__body"
    />
    <DefaultDetailsButtons
      className="EditorDetailsPanel__buttons"
      item={
        Object {
          "name": "Test",
        }
      }
      onDelete={[MockFunction]}
      onEdit={[MockFunction]}
    />
  </React.Fragment>
</aside>
`;

exports[`EditorDetailsPanel rendering renders expected elements with two children 1`] = `
<aside
  className="EditorDetailsPanel"
  id="test"
>
  <IconButton
    aria-label="Close"
    className="EditorDetailsPanel__close"
    icon={
      Object {
        "icon": Array [],
      }
    }
    id="closeDetailsPanelBtn"
    size="large"
    tooltipPlacement="left"
    tooltipText="Close"
    type="ghost"
  />
  <div
    aria-level="2"
    className="EditorDetailsPanel__title"
    id="detailsPanelTitle"
    role="heading"
  >
    Test
  </div>
  <React.Fragment>
    <div
      className="EditorDetailsPanel__body"
    />
    <div
      className="EditorDetailsPanel__buttons"
    />
  </React.Fragment>
</aside>
`;

exports[`EditorDetailsPanel rendering renders expected elements with two children when second child is null 1`] = `
<aside
  className="EditorDetailsPanel"
  id="test"
>
  <IconButton
    aria-label="Close"
    className="EditorDetailsPanel__close"
    icon={
      Object {
        "icon": Array [],
      }
    }
    id="closeDetailsPanelBtn"
    size="large"
    tooltipPlacement="left"
    tooltipText="Close"
    type="ghost"
  />
  <div
    aria-level="2"
    className="EditorDetailsPanel__title"
    id="detailsPanelTitle"
    role="heading"
  >
    Test
  </div>
  <React.Fragment>
    <div
      className="EditorDetailsPanel__body"
    />
  </React.Fragment>
</aside>
`;
